another update for blog

--- a/Introduction/index.html
+++ b/Introduction/index.html
@@ -365,7 +365,7 @@ summary {
 
 <h1 class="title toc-ignore">Introduction</h1>
 <h4 class="author"><strong>Sagiru Mati</strong></h4>
-<h4 class="date"><strong>Tuesday, August 13, 2019</strong></h4>
+<h4 class="date"><strong>Wednesday, August 14, 2019</strong></h4>
 
 </div>
 
@@ -388,8 +388,9 @@ summary {
 <li><p>How to learn Eviews programming easily</p></li>
 <li><p>How to make your reports dynamic and reproducible using <strong>Eviews, R and R Markdown</strong>. You will no longer have to copy tables and figures from your Eviews workspace and paste into your report; everything will be copied into your report dynamically and automatically.</p></li>
 <li><p>How to integrate Eviews, R, and R Markdown. That is running Eviews program from another application.</p></li>
-<li><p>Tricks to produce <strong>html, pdf and docx</strong> from one source file.</p></li>
-<li><p>Step by step guide to develop an R package that can work integrate Eviews R, and R Markdown.</p></li>
+<li><p>Tricks to produce <strong>html, pdf and docx</strong> outputs from one source file of <strong>R Markdown</strong>. If you learn R Markdown, you are likely to burn all our <span class="math inline">\(\LaTeX\)</span> distributions and other authoring (typesetting) applications.</p></li>
+<li><p>Step by step guide to develop an R package that can integrate Eviews R, and R Markdown.</p></li>
+<li><p>Learn how to work with version control system, specifically <a href="https://www.github.com">github</a>. Therefore, you longer have to be saving your files with various names (such as update1, update2,final version, final version2 and so on)</p></li>
 <li><p>In addtion to this, I will make sure that followers of this blog learn how to set up a blog and a webpage like this, where you have all your codes, tables, graphs and explanation in one place.</p></li>
 <li><p>A lot of other important skills.</p></li>
 </ol>
@@ -458,6 +459,9 @@ legend(&quot;topleft&quot;,c(&quot;Niger&quot;,&quot;Nigeria&quot;,&quot;Ivory C
 <h1><span class="header-section-number">5</span> Why Eviews, R and R Markdown?</h1>
 <p>I have chosen to work with <a href="https://www.eviews.com">Eviews</a> on this <strong>Blog</strong> as it is one of the popular statistical tools for timeseries and panel data analyses. Moreover, its learning curve is not steep (we will learn the basics of Eviews programming before integrating it in R Markdown). Additionally, I am yet to see any blog, book or serious academic article written purposely to integrate Eviews in R Markdown.</p>
 <p>R and R Markdown are necessary tools for dynamic and reproducible reports as they can set up to commmunicate with Eviews. Moreover, the first two tools are free and open-source and license of Eviews is relatively low, especially for students.</p>
+<p><br><br></p>
+<p>In order to read more about me, please <a href="https:smatiacademy.blogspot.com">visit my Blog</a>, which I created purposely for those interested in learning Dynamic and Reproducible reports using <strong>Eviews, R and R Markdown</strong>.</p>
+<p>Please feel free to post questions, comments, suggestions and/or corrections on the <strong>Blog</strong>.</p>
 <p><br><br><br></p>
 </div>
 <div id="references" class="section level1 unnumbered">
