--- a/index.html
+++ b/index.html
@@ -365,16 +365,17 @@ summary {
 
 <h1 class="title toc-ignore">Dynamic and Reproducible Reports Using Eviews, R and R Markdown</h1>
 <h4 class="author"><strong>Sagiru Mati</strong></h4>
-<h4 class="date"><strong>Tuesday, August 13, 2019</strong></h4>
+<h4 class="date"><strong>Wednesday, August 14, 2019</strong></h4>
 
 </div>
 
 
 <p><br><br></p>
 <p>Welcome to the homepage for <strong>Dynamic and Reproducible Reports Using Eviews, R and R Markdown</strong></p>
-<p>In order to read more about me, please visit my <a href="https:sagirmati.blogspot.com">Blog</a>, which I created purposely for those interested in learning Dynamic and Reproducible reports using <strong>Eviews, R and R Markdown</strong>.</p>
+<p><br><br></p>
+<p>In order to read more about me, please <a href="https:smatiacademy.blogspot.com">visit my Blog</a>, which I created purposely for those interested in learning Dynamic and Reproducible reports using <strong>Eviews, R and R Markdown</strong>.</p>
 <p>Please feel free to post questions, comments, suggestions and/or corrections on the <strong>Blog</strong>.</p>
-<p><br><br><br><br></p>
+<p><br><br></p>
 <p><strong>Sagiru Mati,</strong></p>
 <p><strong>Department of Economics,</strong></p>
 <p><strong>Northwest University (Yusuf Maitama Sule University) Kano,</strong></p>
