change LATEX to inline math

--- a/Introduction/index.html
+++ b/Introduction/index.html
@@ -388,9 +388,10 @@ summary {
 <li><p>How to learn Eviews programming easily</p></li>
 <li><p>How to make your reports dynamic and reproducible using <strong>Eviews, R and R Markdown</strong>. You will no longer have to copy tables and figures from your Eviews workspace and paste into your report; everything will be copied into your report dynamically and automatically.</p></li>
 <li><p>How to integrate Eviews, R, and R Markdown. That is running Eviews program from another application.</p></li>
-<li><p>Tricks to produce <strong>html, pdf and docx</strong> outputs from one source file of <strong>R Markdown</strong>. If you learn R Markdown, you are likely to burn all our <span class="math inline">\(\LaTeX\)</span> distributions and other authoring (typesetting) applications.</p></li>
-<li><p>Step by step guide to develop an R package that can integrate Eviews R, and R Markdown.</p></li>
-<li><p>Learn how to work with version control system, specifically <a href="https://www.github.com">github</a>. Therefore, you longer have to be saving your files with various names (such as update1, update2,final version, final version2 and so on)</p></li>
+<li><p>Tricks to produce <strong>html, pdf and docx</strong> outputs from one source file of <strong>R Markdown</strong>. If you learn R Markdown, you are likely to burn all our Latex (<span class="math inline">\(\LaTeX\)</span>) distributions and other authoring (typesetting) applications.</p></li>
+<li><p>Learn how to automatically format tables, graphs and text in your html, pdf and docx documents. Imagine controlling and formatting (bold, italic,centering) all tables in your docx file by pressing some keys like <code>ctrl+T</code></p></li>
+<li><p>Step by step guide to develop an R package that can integrate Eviews, R, and R Markdown.</p></li>
+<li><p>Learn how to work with version control system, specifically <a href="https://www.github.com">github</a>. Therefore, you <strong>no longer</strong> have to be saving your files with various names (such as update1, update2, final version, final version2 and so on)</p></li>
 <li><p>In addtion to this, I will make sure that followers of this blog learn how to set up a blog and a webpage like this, where you have all your codes, tables, graphs and explanation in one place.</p></li>
 <li><p>A lot of other important skills.</p></li>
 </ol>
@@ -451,7 +452,7 @@ legend(&quot;topleft&quot;,c(&quot;Niger&quot;,&quot;Nigeria&quot;,&quot;Ivory C
 </div>
 <div id="tools-for-dynamic-and-reproducible-reports" class="section level1">
 <h1><span class="header-section-number">4</span> Tools for Dynamic and Reproducible Reports</h1>
-<p>To some extent, <span class="math inline">\(\LaTeX\)</span>, <strong>Microsoft Office Word</strong>, <strong>LibreOffice</strong> and <strong>OpenOffice</strong> can make reports <strong>dynamic and reproducible</strong>. However, their capacity is limited as they make no provisions for <code>inline codes</code>.</p>
+<p>To some extent, Latex (<span class="math inline">\(\LaTeX\)</span>), <strong>Microsoft Office Word</strong>, <strong>LibreOffice</strong> and <strong>OpenOffice</strong> can make reports <strong>dynamic and reproducible</strong>. However, their capacity is limited as they make no provisions for <code>inline codes</code>.</p>
 <p>Other tools of dynamic and reproducible reports include SASDown by <em>Statistical Analysis Software</em> (<a href="https://www.sas.com">SAS</a>), <em>Stata Markdown</em> introduced in <a href="https://www.stata.com">Stata</a> 16. The limitations of these tools include inability to work (communicate) with other programming languages or statistical softwares. For example, Stata cannot work in tandem with SAS or C++ to make dynamic and reproducible reports, and the reverse is true.</p>
 <p>On the other hand, <a href="https://www.r-project.org">R</a> and <em>R Markdown</em> provided by the Integrated Development Environment <a href="https://www.rstudio.com">Rstudio</a> offer the possibility of making reports dynamic and reproducible, and can <strong>communicate</strong> with other statistical softwares or other programming languages. Thanks to <a href="https://yihui.name/knitr/">knitr</a> package created by <a href="https://www.yihui.name">Yihui Xie</a> <span class="citation">(see Xie, <a href="#ref-yihui2019">2019</a>, <a href="#ref-yihui2014">2014</a>, <a href="#ref-yihui2015">2015</a>)</span></p>
 </div>
