corrected the mistake of my blog link

--- a/Introduction/index.html
+++ b/Introduction/index.html
@@ -365,7 +365,7 @@ summary {
 
 <h1 class="title toc-ignore">Introduction</h1>
 <h4 class="author"><strong>Sagiru Mati</strong></h4>
-<h4 class="date"><strong>Wednesday, August 14, 2019</strong></h4>
+<h4 class="date"><strong>Thursday, August 15, 2019</strong></h4>
 
 </div>
 
@@ -461,7 +461,7 @@ legend(&quot;topleft&quot;,c(&quot;Niger&quot;,&quot;Nigeria&quot;,&quot;Ivory C
 <p>I have chosen to work with <a href="https://www.eviews.com">Eviews</a> on this <strong>Blog</strong> as it is one of the popular statistical tools for timeseries and panel data analyses. Moreover, its learning curve is not steep (we will learn the basics of Eviews programming before integrating it in R Markdown). Additionally, I am yet to see any blog, book or serious academic article written purposely to integrate Eviews in R Markdown.</p>
 <p>R and R Markdown are necessary tools for dynamic and reproducible reports as they can set up to commmunicate with Eviews. Moreover, the first two tools are free and open-source and license of Eviews is relatively low, especially for students.</p>
 <p><br><br></p>
-<p>In order to read more about me, please <a href="https:smatiacademy.blogspot.com">visit my Blog</a>, which I created purposely for those interested in learning Dynamic and Reproducible reports using <strong>Eviews, R and R Markdown</strong>.</p>
+<p>In order to read more about me, please <a href="https://smatiacademy.blogspot.com">visit my Blog</a>, which I created purposely for those interested in learning Dynamic and Reproducible reports using <strong>Eviews, R and R Markdown</strong>.</p>
 <p>Please feel free to post questions, comments, suggestions and/or corrections on the <strong>Blog</strong>.</p>
 <p><br><br><br></p>
 </div>
